<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarroActivity">

    <EditText
        android:id="@+id/nome"
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/nome_veiculo"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ano"
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/ano_veiculo"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placa_abastecimento" />

    <EditText
        android:id="@+id/placa_abastecimento"
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/placa_veiculo"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome" />

    <Button
        android:id="@+id/salvarVeiculo"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="340dp"
        android:onClick="salvarVeiculo"
        android:text="@string/salvar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Excluir"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="12dp"
        android:onClick="excluirVeiculo"
        android:text="@string/excluir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salvarVeiculo" />

    <Button
        android:id="@+id/Editar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="216dp"
        android:layout_marginLeft="216dp"
        android:layout_marginTop="12dp"
        android:onClick="editarVeiculo"
        android:text="@string/editar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salvarVeiculo" />

    <Button
        android:id="@+id/Listar"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="76dp"
        android:onClick="listagemIr"
        android:text="@string/listar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salvarVeiculo" />

    <Button
        android:id="@+id/button4"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="12dp"
        android:onClick="voltar"
        android:text="@string/Voltar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Listar" />

</android.support.constraint.ConstraintLayout>